--- a/behat.yml.dist
+++ b/behat.yml.dist
@@ -6,8 +6,8 @@ default:
   extensions:
     Behat\MinkExtension:
       base_url: 'http://localhost:8000'
-        goutte: null
-        selenium2: null
-    Moodle\BehatExtension\Extension:
+      goutte: null
+      selenium2: null
+    Moodle\BehatExtension:
       moodlerootdir: /home/rajesh/moodles/behat3/moodle
       steps_definitions: {  }
